--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ height:99%;
 Position:relative;
 }
 
-body{   background-image:url(" https://raw.githubusercontent.com/diamondrolls/images/main/443B6FE0-A7A5-4AA3-852F-8D668C0BDE1A.jpeg");
+body{   background-image:url(" https://upload.wikimedia.org/wikipedia/commons/e/e0/Earth_viewed_from_Apollo_13.gif");
 
 	background-size:100% 1200px;
         overflow:hidden;   
