--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ height:99%;
 Position:relative;
 }
 
-body{   background-image:url(" https://upload.wikimedia.org/wikipedia/commons/e/e0/Earth_viewed_from_Apollo_13.gif");
+body{   background-image:url(" https://images.radio.com/aiu-media/GettyImages1195199589-6a30dfb5-3ac8-4f48-957d-b2f95225b978.jpg?width=800");
 
 	background-size:100% 1200px;
         overflow:hidden;   
