--- a/style.css
+++ b/style.css
@@ -40,22 +40,22 @@ position:relative;
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes kitty{
  0% { 
-       top:500px;
+       top:100px;
        
        }
 100% { 
-        top:700px;
+        top:300px;
            
           }
 }
 
 @keyframes kitty{ 
  0% { 
-       top:500px;
+       top:100px;
        
        }
 100% { 
-        top:700px;
+        top:300px;
            
           }
         }
@@ -212,12 +212,10 @@ height:99%;
 Position:relative;
 }
 
-body{   background-image:url(" https://images.radio.com/aiu-media/GettyImages1195199589-6a30dfb5-3ac8-4f48-957d-b2f95225b978.jpg?width=800");
-
-	background-size:100% 1200px;
+body{   
+	background-image:url(" https://images.radio.com/aiu-media/GettyImages1195199589-6a30dfb5-3ac8-4f48-957d-b2f95225b978.jpg");
+	background-size:100% 1000px;
         overflow:hidden;   
 	 width:100%;
-	 height:1200px;
-	 		
-
+	 height:1000px;
            }
