--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 .planeholder{
-        
+        transform: translateZ(200px);
 	position:absolute;
 	 height:700px;
 	width:800px;
@@ -36,6 +36,7 @@ position:relative;
 	top:100px;
 	       float:left;
 	 z-index:200px;
+	       transform: translateZ(235px);
 }
 .plane1{
 background-image:url("https://raw.githubusercontent.com/diamondrolls/images/main/5A3397CE-4193-4B6B-9A56-897543975D23.png");    
