--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
         height:200px;
 	width:100px;
 	top:100px;
+        left:400px;
 	       float:left;
 	 z-index:200px;
 	       transform: translateZ(235px);
