--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 	 height:800px;
 	width:100%;
 	top:100px;
+        padding-top:120px;
 	animation: kitty 5s infinite alternate;
         -webkit-animation: kitty 5s infinite alternate;
 }
@@ -21,11 +22,13 @@
 	    transform: translateZ(-200px);
      }
 .mouth{
+       background-color:rgb(0,0,0);
 	border-color:rgb(255,255,255);
 	border-style:outset;
         height:2px;
 	width:50px;
 	top:20px;
+        left:40px;
 	transform: translateZ(235px);
 	position:relative;
 }
@@ -39,7 +42,7 @@
 	background-size:200px 500px;
         height:500px;
 	width:200px;
-	top:100px;
+	top:200px;
         left:400px; 
 	 z-index:200px;
 	       transform: translateZ(235px);
