--- a/style.css
+++ b/style.css
@@ -80,6 +80,34 @@ position:relative;
            
           }
         }
+
+* Safari 4.0 - 8.0 */
+@-webkit-keyframes mouth{
+ 0% { 
+       height:2px;
+	width:50px;
+       
+       }
+100% { 
+        height:10px;
+	width:20px;
+           
+          }
+}
+
+@keyframes mouth{ 
+ 0% { 
+       height:2px;
+	width:50px;
+       
+       }
+100% { 
+        height:10px;
+	width:20px;
+           
+          }
+        }
+
 	.ufo {
     position:relative;
     top:500px;
