--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@
         left:40px;
 	transform: translateZ(235px);
 	position:relative;
-       animation: moth 1s infinite alternate;
-        -webkit-animation: moth 1s infinite alternate;
+       animation: moth .2s infinite alternate;
+        -webkit-animation: moth .2s infinite alternate;
 }
 
 
@@ -49,6 +49,44 @@
 	 z-index:200px;
 	       transform: translateZ(235px);
 }
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes movements{
+ 0% { 
+       top:200px;
+       left:400px;
+       }
+50% { 
+        top:100px;
+       transform:rotateY(180deg);
+         left:600px;  
+          }
+
+100% { 
+        top:400px;
+         left:100px;  
+          }
+
+}
+
+@keyframes movements{ 
+    0% { top:200px;
+       left:400px;
+       }
+50% { 
+        top:100px;
+       transform:rotateY(180deg);
+         left:600px;  
+          }
+
+100% { 
+        top:400px;
+         left:100px;  
+          
+          }
+        }
+
+
 .plane1{
 background-image:url("https://raw.githubusercontent.com/diamondrolls/images/main/5A3397CE-4193-4B6B-9A56-897543975D23.png");    
 position:relative;
@@ -83,7 +121,7 @@ position:relative;
           }
         }
 
-* Safari 4.0 - 8.0 */
+/* Safari 4.0 - 8.0 */
 @-webkit-keyframes moth{
  0% { 
        height:2px;
