--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
      position:absolute;
       boarder-style:solid;
 	border-radius:50px;
-        height:200;
+        height:200px;
 	width:200px;
 	top:200px;
         left:400px; 
@@ -525,8 +525,8 @@ Position:relative;
 
 body{   
 	background-image:url(" https://raw.githubusercontent.com/diamondrolls/images/main/0884ED3C-776F-4D05-9431-9D05B5FB51A4.jpeg");
-	background-size:100% 1000px;
+	background-size:100% 100%;
         overflow:hidden;   
 	 width:100%;
-	 height:1000px;
+	 height: 100%;
            }
