--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@
 
 76% { 
        top:15px;
-       left:515px;
+       left:100%;
        }
 
 80% { 
@@ -303,7 +303,7 @@
 
 76% { 
        top:15px;
-       left:515px;
+       left:100%;
        }
 
 80% { 
