--- a/style.css
+++ b/style.css
@@ -9,35 +9,82 @@
 	animation: kitty 5s infinite alternate;
         -webkit-animation: kitty 5s infinite alternate;
 }
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes stars{
+ 0% { top:10px;
+       left:200px;}
+100% { top:900px;
+       left:700px;}
+  
+}
+		  
+@keyframes  stars{
+ 0% { top:10px;
+       left:200px;}
+100% { top:900px;
+       left:700px;}
 
-.mouth{
-       background-color:rgb(0,0,0);
-	border-color:rgb(255,255,255);
-	border-style:outset;
-        height:2px;
-	width:50px;
-	top:20px;
-        left:40px;
-	transform: translateZ(235px);
-	position:relative;
-      }
+}  
+	
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes stars2{
+ 0% { top:10px;
+       left:200px;}
+100% { top:900px;
+       left:700px;}
+  
+}
+		  
+@keyframes  stars2{
+ 0% { top:10px;
+       left:700px;}
+100% { top:900px;
+       left:200px;}
+       }
 
-.words {
-       position:absolute;
-        background-color:rgba(0,0,0,.6);
-       height:200px;
-       top:500px;
-         width:500px;
-        border-style:inset;
-        border-color:rgb(0,255,255);
-        border-radius:45px;
-       animation: war 5s infinite alternate;
-        -webkit-animation: war  5s infinite alternate;
-        z-index:210px;
-        transform: translateZ(335px);
-       
+.sun {
+    position:relative;
+    top:10px;
+    width:15px;
+    left:200px;
+border-radius:50%;
+    background-color:rgba(255,255,255,.5);
+    height:15px;
+    overflow:hidden;
+    z-index:99;
+    animation:stars 7s infinite alternate;
+       -webkit-animation: stars 7s infinite alternate;/* Safari 4.0 - 8.0 */
+}
+     
+.sun2 {
+    position:relative;
+    left:700px;
+    top:10px;
+    width:15px;
+border-radius:50%;
+    background-color:rgba(255,255,255,.5);
+    height:15px;
+    overflow:hidden;
+    z-index:99;
+    animation:stars2 5s infinite alternate;
+       -webkit-animation: stars2 5s infinite alternate;/* Safari 4.0 - 8.0 */
+}
 
-     }
+
+.sun3 {
+    position:relative;
+    left:200px;
+    top:10px;
+    width:15px;
+    border-radius:50%;
+    background-color:rgba(255,255,255,.5);	
+    height:15px;
+    overflow:hidden;
+    z-index:99;
+    animation:stars 20s infinite alternate;
+       -webkit-animation: stars 20s infinite alternate;/* Safari 4.0 - 8.0 */
+}
+
 
 /*Safari 4.0 - 8.0 */
 @-webkit-keyframes war{
@@ -64,11 +111,12 @@
 .lilfacebook{
 
    background-image:url("https://raw.githubusercontent.com/diamondrolls/images/main/EE761A8C-86EC-4813-8BDC-0590F0AE51E2.jpeg");    
-     position:absolute;
+   background-size:100% 100%;
+   position:absolute;
       boarder-style:solid;
 	border-radius:50px;
-        height:700px;
-	width:700px;
+        height:400px;
+	width:400px;
 	top:200px;
 
 	 z-index:200px;
