--- a/style.css
+++ b/style.css
@@ -113,7 +113,8 @@ border-radius:50%;
    background-image:url("https://raw.githubusercontent.com/diamondrolls/images/main/EE761A8C-86EC-4813-8BDC-0590F0AE51E2.jpeg");    
    background-size:100% 100%;
    position:absolute;
-      boarder-style:solid;
+      border-style:solid;
+     border-color:rgb(0, 255, 255);
 	border-radius:50px;
         height:400px;
 	width:400px;
